--- a/renovate.json
+++ b/renovate.json
@@ -18,11 +18,11 @@
         "repology"
       ],
       "packagePatterns": [
-        "^ubuntu_stable/"
+        "^debian_stable/"
       ],
       "separateMajorMinor": false,
-      "groupName": "ubuntu packages",
-      "groupSlug": "ubuntu"
+      "groupName": "debian packages",
+      "groupSlug": "debian"
     }
   ]
 }
