--- a/Dockerfile1
+++ b/Dockerfile1
@@ -1,6 +1,6 @@
 FROM ubuntu:22.04
 
-# renovate: datasource=repology depName=ubuntu_22_04/nodejs versioning=deb
+# renovate: datasource=repology depName=ubuntu_22_04/nodejs versioning=loose
 ENV NODE_VERSION="16.20.2-deb-1nodesource1"
 RUN apt-get update && \
  curl -L https://deb.nodesource.com/setup_16.x | bash && \
