--- a/Dockerfile1
+++ b/Dockerfile1
@@ -1,6 +1,6 @@
 FROM ubuntu:22.04
 
-# renovate: datasource=repology depName=debian_12/nodejs versioning=deb
+# renovate: datasource=custom depName=nodejs versioning=deb
 ENV NODE_VERSION="16.17.1-deb-1nodesource1"
 RUN apt-get update && \
  curl -L https://deb.nodesource.com/setup_16.x | bash && \
